# weedwatch

./: .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md
.claude/: settings.json
configs/: eval_seeds.txt  oracle_test.yaml  train_garden.yaml  train_seeds.txt
docs/: DECISIONS.md  DESIGN.md  PLAN.md  REFERENCES.md  WORK.md  spec.html
patches/: cropcraft-4class-labels.patch
perception/: assert_percept.py  calibrate_camera.py  detect_server.py  env.sh  eval_model.py  metrics.py  overlay.py  percept_overlay.py  requirements.txt  seg_data.py  stamp_targets.py  train.py  ww_perception_node.py
scripts/: cropcraft.sh  env.sh  fetch_aihub.sh  view.sh  watch_field.sh  watch_row.sh
src/weedwatch_bringup/: package.xml  setup.cfg  setup.py
src/weedwatch_bringup/launch/: skeleton.launch.py
src/weedwatch_control/: package.xml  setup.cfg  setup.py
src/weedwatch_control/weedwatch_control/: control_node.py
src/weedwatch_coordinator/: package.xml  setup.cfg  setup.py
src/weedwatch_coordinator/weedwatch_coordinator/: coordinator_node.py
tests/: test_camera_coverage.py  test_camera_rate.py  test_coverage.py  test_detect_merge.py  test_fix_materials.py  test_garden_geometry.py  test_inertia.py  test_oracle.py  test_urdf.py
tools/: assert_dataset.py  assert_drive.py  assert_field_live.py  assert_joints.py  assert_render.py  assert_row_stamp.py  assert_shake.py  assert_stamp.py  assert_straddle.py  assert_tilt.py  assert_tilt_stamp.py  bake_dataset.py  blender_gpu.py  build_dashboard.py  coverage_path.py  diag_slip.py  drive_field.py  drive_row.py  field_run.py  field_run_ros.py  fix_materials.py  garden_geometry.py  inertia.py  make_field_world.py  make_garden_field.py  make_garden_world.py  make_ridge.py  make_shake_world.py  make_strike_world.py  make_tilt_world.py  make_urdf.py  oracle.py  render_species.py  robot_body.py  ros_drive_smoke.py  run_headless.sh  species_reference.py  strike_marks.py  ww_control.py
worlds/: garden_ridge.sdf  robot_calib.sdf  robot_camera.sdf  robot_drive.sdf  robot_field.sdf  robot_field_multi.sdf  robot_percept.sdf  robot_row.sdf  robot_shake.sdf  robot_spawn.sdf  robot_stamp.sdf  robot_straddle.sdf  robot_strike.sdf  robot_tilt.sdf  (+2 more)
(+2 files in other folders)
