<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weedwatch_coordinator</name>
  <version>0.1.0</version>
  <description>관통 코디네이터 노드 — 두둑 순회·타격 판단·로깅 (자율주행 두뇌). DECISIONS 036·038.</description>
  <maintainer email="wol00107@gmail.com">JunH95</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>weedwatch_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
